tests/paczka1/small_fuzzy/11038797.err
Error in line 2: pkX31JwD A786 1,1
Error in line 3: pkX31JwD A252 34,3
Error in line 9: S880 S880 96,5
Error in line 14: SgzK5qP5aQ S880 49,0
